
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "=1.6.7"
#spl-token = "3.1.1"
spl-token = { version = "3.0.0", features = ["no-entrypoint"] }
getrandom = { version = "0.2.2", features = ["custom"] }

[dev-dependencies]
solana-program-test = "=1.6.7"
solana-sdk = "=1.6.7"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
